# advent-of-code-23

./: mypy.ini  pyproject.toml
1/: 1.py
2/: 2.py
3/: 3.py
4/: 4.py
5/: main.py
